Fixed expand/collapse aside formatting

--- a/my-app/src/app/results/results.component.scss
+++ b/my-app/src/app/results/results.component.scss
@@ -1,6 +1,7 @@
 @mixin results() {
   & {
     margin: 1rem;
+    min-height: 10rem;
     display: block;
   }
   nav {
